# DocuMind

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: chat.py  documents.py  storage.py
app/core/: config.py  errors.py  logging.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 340ca0a465da_init.py
app/models/: chunk.py  document.py
app/repositories/: chunks.py  documents.py  faiss.py
app/schemas/: chat.py  documents.py
app/services/: chat.py  chunking.py  documents.py  embeddings.py  llm.py
app/services/storage/: base.py  local_presign.py
app/utils/: signing.py  text_cleaning.py  tokens.py
app/utils/text_extractors/: base.py  docx.py  pdf.py  registry.py  txt.py
app/workers/: celery_app.py  tasks.py
docs/: REPO_GUIDE.md
