[project]
name = "documind"
version = "0.1.0"
description = ""
authors = [
    {name = "Gaurav",email = "gauravgowda452@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "celery[redis] (>=5.6.3,<6.0.0)",
    "redis (<6.5)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "openai (>=2.32.0,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "app" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
